deleted files, modified javascript

--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang= "en-us">
 <head>
 	<neta charset= "UTF-8">
-	
-	<title>90s Cartoon Hangman</title>
+	<title>Gargoyles Cartoon Hangman</title>
 </head>
 <body>
 	<header>
-		<h1> 90s Cartoon Hangman!</h1>
-		<h2> feel the nostalgia!</h2>
+		<h1> Gargoyles Hangman!</h1>
+		<h2> feel the nostalgia of the greatest 90s era cartoon from Disney!</h2>
 	</header>
 	<section class="main-body">
 
