added code to manipulate DOM with javascript

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 				<p>Wins:<span id="wins">_</span></p>
 				<p>Losses:<span id="losses">_</span></p>
 				<p>Current Word:</p>
-				<p>" "<span id="gameWord">_</span></p>
+				<p><span id="game-word">_</span></p>
 				<p>Guesses Remaining: <span id="guesses">_</span></p>
-				<p>Letters Guessed: <span id="letterGuessed">_</span></p>
+				<p>Letters Guessed: <span id="letters-guessed">_</span></p>
 			</section>
 	<script src="assets/javascript/game.js"></script>
 </body>
